# UniSoul

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/include/: AController.hpp  AView.hpp  AppState.hh  AppStateFlag.hh  ConnectCommand.hpp  CreateConnectionCommand.hpp  DeconnectCommand.hpp  DisconnectCommand.hpp  Epoll.hh  Epoll.hh~  Epoll.hpp  ErrorWithConnectionException.hh  GetUserCommand.hpp  GetUserFromCommand.hpp  HelpCommand.hpp  IModel.hpp  IMultiplexer.hh  IObserver.hpp  ITCPSocketClient.hpp  IUDPSocketClient.hpp  MessageCommand.hpp  Observable.hpp  ObserverOutputResult.hh  Parser.hh  QuitCommand.hpp  StatusCommand.hpp  TCPCallbackAccept.hh  TCPCallbackRead.hh  TCPCallbackWrite.hh  TCPSocketClientLinux.hpp  TCPSocketServerLinux.hpp  UDPSocketClientLinux.hpp  UniSoulClient.hh  UniSoulClient.hpp  UniSoulConsoleController.hh  UniSoulConsoleView.hh
Client/src/: Epoll.cpp  ErrorWithConnectionException.cpp  Parser.cpp  TCPCallbackAccept.cpp  TCPCallbackRead.cpp  TCPCallbackWrite.cpp  UniSoulClient.cpp  UniSoulConsoleController.cpp  UniSoulConsoleView.cpp  main.cpp  main.cpp~
Server/: CMakeLists.txt
Server/include/: AFile.hpp  AsyncAcceptHandler.hpp  AsyncReadHandler.hpp  AsyncWriteHandler.hpp  BoostDescriptor.hh  BoostServiceWrapper.hh  ChannelGetterManager.hh  ChatRoom.hh  ChatRoomGetter.hh  ChatRoomGetterManager.hh  ChatRoomManager.hh  ClientChecker.hh  ClientCheckerManager.hh  ClientInfo.hh  CommandExecutor.hpp  CommandFactory.hpp  CommandNotFoundException.hh  CommandType.hh  ConnectCommand.hpp  ConnectionCommand.hpp  ConnectionManager.hpp  ConnectionState.hh  ConnectionStateFlag.hh  CreateConnectionCommand.hpp  DeconnectCommand.hpp  DeconnectionCommand.hpp  Descriptor.hh  DeserializeErrorFromAsyncTaskHandler.hpp  Directory.hpp  DisconnectCommand.hpp  DisconnectFromAsyncTaskHandler.hpp  ErrorOpeningFileException.hh  File.hpp  GetUserCommand.hpp  GetUserFromCommand.hpp  HandlerAsyncAccept.hpp  HandlerAsyncRead.hpp  HandlerAsyncWrite.hpp  IApp.hh  IChannelSystem.hh  (+28 more)
Server/src/: BoostServiceWrapper.cpp  ClientChecker.cpp  ClientCheckerManager.cpp  CommandNotFoundException.cpp  ErrorOpeningFileException.cpp  ServerMessage.cpp  TCPBoostSocket.cpp  UniSoulServer.cpp  UniSoulSystemWrapper.cpp  UserCheckerManager.cpp  main.cpp
common/command/: CommandType.hh  ICommand.hpp
common/network/: ISocket.hpp  ITCPSocket.hpp  ITCPSocketServer.hpp  IUDPSocket.hpp  RemoteConnectionInfo.cpp  RemoteConnectionInfo.hh  UniSoulNetworkProtocol.cpp
common/other/: AFile.hpp  CommandExecutor.hpp  CommandFactory.hpp  CommandNotFoundException.cpp  CommandType.hh  Directory.hpp  File.hpp  ISocket.hpp  ITCPSocket.hpp  PersistentDataFileInteractor.hpp  UnknownCommandException.cpp  UnknownCommandException.hh
common/packet/: UniSoulPacketFactory.cpp  UniSoulPacketFactory.hh
common/persistence/: File.hpp  PersistentDataFileInteractor.hpp
common/protocol/: UniSoulNetworkProtocol.hh
common/serializable/: SerializationException.cpp  SerializationException.hh  SerializationHandler.hpp  UniSoulNetworkProtocolSerializable.cpp
common/serialization/: SerializationFailException.cpp  SerializationFailException.hh  SerializationTool.hpp
common/tool/: ComplementaryFunction.hpp  SmartPointer.hpp
common/user/: user1.txt  user2.txt  user3.txt  user4.txt  users.txt
other/data/: users.txt
other/packet/: IPacketStateChecker.hpp  NetworkPacketException.cpp  NetworkPacketException.hh  UniSoulPacketFactory.cpp  UniSoulPacketFactory.hh  UniSoulPacketStateChecker.cpp  UniSoulPacketStateChecker.hh
other/protocol/: RequestEnumConverter.cpp  RequestEnumConverter.hh  UniSoulNetworkProtocol.hh
other/serializable/: ASerializable.hpp  SerializationHandler.hpp  UniSoulNetworkProtocolSerializable.cpp  UniSoulNetworkProtocolSerializable.hh
other/tool/: SmartPointer.hpp
protocol/: UniSoulNetworkProtocol.hh
